--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -613,7 +613,7 @@ margin-bottom: 50px;
   .sidebar {
     display: flex;
     height: 300px;
-    width: auto;
+    width: 150px;
     margin: 100px  50px 0 50px;
  }
 
@@ -669,6 +669,7 @@ margin-bottom: 50px;
   
   .sidebar {
      height: 450px;
+     width: 300px;
   }
 
   #contact-mid {
