--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,18 @@ body {
   background-color: rgb(70, 22, 154, 0.7);
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 a {
   text-decoration: none;
   color: white;
